<resources>
    <string name="app_name">Lingo Journal</string>
    <!-- Strings used for fragments for navigation -->

    <string name="text_save">Save</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="text_note_title">Note title</string>
    <string name="dropdown_icon_content_description">Choose value</string>
    <string name="text_note_text">Note text</string>
    <string name="hint_language">Language</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="confidence">Confidence</string>
    <string name="motivation">Motivation</string>
    <string name="choose_language">Choose language</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_stats">Stats</string>
    <string name="title_settings">Settings</string>
    <string name="journal">Journal</string>
    <string name="channel_name">Reminder</string>
    <string name="channel_description">Lingo Journal reminders</string>
    <string name="filter_view_lingojournal_add_new">Add New Activity</string>
    <string name="filter_view_lingojournal_stats">Activity Stats</string>
</resources>